// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom/Decorator for Vue Render 1`] = `
<div
  style="border: medium solid blue;"
>
  <div
    style="border: medium solid red;"
  >
    <button
      class="button"
      style="color: pink; border-color: pink;"
    >
      renders component: MyButton!
    </button>
  </div>
</div>
`;

exports[`Storyshots Custom/Decorator for Vue Template 1`] = `
<div
  style="border: medium solid blue;"
>
  <div
    style="border: medium solid red;"
  >
    <button
      class="button"
      style="color: rgb(66, 185, 131); border-color: #42b983;"
    >
      MyButton with template!
    </button>
  </div>
</div>
`;

exports[`Storyshots Custom/Decorator for Vue With Data 1`] = `
<div
  style="border: medium solid blue;"
>
  <div
    style="border: medium solid red;"
  >
    <pre>
      {
  "id": "custom-decorator-for-vue--with-data",
  "kind": "Custom/Decorator for Vue",
  "name": "With Data",
  "story": "With Data",
  "parameters": {
    "docs": {
      "inlineStories": true,
      "iframeHeight": "60px"
    },
    "options": {},
    "globalParameter": "globalParameter",
    "framework": "vue",
    "__id": "custom-decorator-for-vue--with-data",
    "customParameter": 42
  },
  "customContext": 52
}
    </pre>
  </div>
</div>
`;
